--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBnWGLsOSVSoTPR1KZpjKIuziw-ZKaoz-I&callback=initMap"
+            type="text/javascript"></script>
+    <script src="/client/assets/wicket-gmap3.js"></script>
+
+    <title>Vue</title>
   </head>
   <body>
     <div id="app"></div>
