--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBnWGLsOSVSoTPR1KZpjKIuziw-ZKaoz-I&callback=initMap"
-            type="text/javascript"></script>
-    <script src="/client/assets/wicket-gmap3.js"></script>
+    <script type="text/javascript"
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBnWGLsOSVSoTPR1KZpjKIuziw-ZKaoz-I&libraries=drawing">
+    </script>
+    <script type="text/javascript" src="https://rawgit.com/arthur-e/Wicket/master/wicket.js"></script>
+    <script type="text/javascript" src="https://rawgit.com/arthur-e/Wicket/master/wicket-gmap3.js"></script>
+    <!--<script type="text/javascript" src="https://rawgit.com/arthur-e/Wicket/master/wicket-amap.js"></script>-->
+    <!--<script type="text/javascript" src="https://rawgit.com/arthur-e/Wicket/master/wicket-arcgis.js"></script>-->
+    <!--<script type="text/javascript" src="https://rawgit.com/arthur-e/Wicket/master/wicket-arcgis-amd.js"></script>-->
+    <!--<script type="text/javascript" src="https://rawgit.com/arthur-e/Wicket/master/wicket-leaflet.js"></script>-->
+
 
     <title>Vue</title>
   </head>
