--- a/index.html
+++ b/index.html
@@ -8,14 +8,9 @@
     <script type="text/javascript"
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBnWGLsOSVSoTPR1KZpjKIuziw-ZKaoz-I&libraries=drawing">
     </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://rawgit.com/arthur-e/Wicket/master/wicket.js"></script>
     <script type="text/javascript" src="https://rawgit.com/arthur-e/Wicket/master/wicket-gmap3.js"></script>
-    <!--<script type="text/javascript" src="https://rawgit.com/arthur-e/Wicket/master/wicket-amap.js"></script>-->
-    <!--<script type="text/javascript" src="https://rawgit.com/arthur-e/Wicket/master/wicket-arcgis.js"></script>-->
-    <!--<script type="text/javascript" src="https://rawgit.com/arthur-e/Wicket/master/wicket-arcgis-amd.js"></script>-->
-    <!--<script type="text/javascript" src="https://rawgit.com/arthur-e/Wicket/master/wicket-leaflet.js"></script>-->
-
-
     <title>Vue</title>
   </head>
   <body>
