--- a/index.html
+++ b/index.html
@@ -11,8 +11,38 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://rawgit.com/arthur-e/Wicket/master/wicket.js"></script>
     <script type="text/javascript" src="https://rawgit.com/arthur-e/Wicket/master/wicket-gmap3.js"></script>
+    <script type="text/javascript" src="https://rawgit.com/knezmilos13/google-maps-api-contextmenu/master/src/ContextMenu.js"></script>
+
     <title>Vue</title>
   </head>
+  <style>
+    .context_menu{
+      background-color:white;
+      border:1px solid gray;
+      font-size:18px;
+    }
+    .context_menu.menu_item{
+      margin: 20px;
+
+    }
+    .context_menu_item:hover{
+      background-color:#CCCCCC;
+    }
+    .context_menu_separator{
+      background-color:gray;
+      height:1px;
+      margin:0;
+      padding:0;
+    }
+    #clearDirectionsItem, #getDirectionsItem{
+      display:none;
+    }
+    /*	end styles for the ContextMenu	*/
+
+    #map_container{
+      height:100%;
+    }
+  </style>
   <body>
     <div id="app"></div>
   </body>
