1. V-world 맵으로 변경 (google map 삭제) 2. V-world Context Menu 추가 3. Address 좌표기반으로 vworld api를 사용하여서 받아옴.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBnWGLsOSVSoTPR1KZpjKIuziw-ZKaoz-I&libraries=drawing">
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://rawgit.com/arthur-e/Wicket/master/wicket.js"></script>
-    <script type="text/javascript" src="https://rawgit.com/arthur-e/Wicket/master/wicket-gmap3.js"></script>
-    <script type="text/javascript" src="https://rawgit.com/knezmilos13/google-maps-api-contextmenu/master/src/ContextMenu.js"></script>
+    <script src="https://openlayers.org/en/v4.6.5/build/ol.js"></script>
+    <script type="text/javascript" src="http://map.vworld.kr/js/vworldMapInit.js.do?version=2.0&apiKey=D01A2D82-B1E6-3340-84D4-462002F06506"></script>
+    <link href="https://unpkg.com/ol-contextmenu/dist/ol-contextmenu.min.css" rel="stylesheet">
+    <script src="https://unpkg.com/ol-contextmenu"></script>
+
 
     <title>Vue</title>
   </head>
