--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://openlayers.org/en/v4.6.5/build/ol.js"></script>
-    <script type="text/javascript" src="http://map.vworld.kr/js/vworldMapInit.js.do?version=2.0&apiKey=D01A2D82-B1E6-3340-84D4-462002F06506"></script>
+    <!--<script type="text/javascript" src="http://map.vworld.kr/js/vworldMapInit.js.do?version=2.0&apiKey=D01A2D82-B1E6-3340-84D4-462002F06506"></script>-->
     <link href="https://unpkg.com/ol-contextmenu/dist/ol-contextmenu.min.css" rel="stylesheet">
     <script src="https://unpkg.com/ol-contextmenu"></script>
+    <!--<script src="node_modules/vue-color/dist/vue-color.min.js"></script>-->
 
 
     <title>Vue</title>
